[package]
name = "deptryrs"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "deptry"
crate-type = ["cdylib"]

[dependencies]
chardetng = "=0.1.17"
encoding_rs = "=0.8.35"
ignore = "=0.4.23"
log = "=0.4.27"
path-slash = "=0.2.1"
pyo3 = { version = "=0.25.1", features = ["abi3-py39", "generate-import-lib"] }
pyo3-log = "=0.12.4"
rayon = "=1.10.0"
regex = "=1.11.1"
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.12.4" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.12.4" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff", tag = "0.12.4" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "0.12.4" }
serde_json = "=1.0.141"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
