[tool.poetry]
name = "deptry-docs"
version = "0.1.0"
description = "Build and deploy documentation for deptry"
authors = ["Florian Maas <fpgmaas@gmail.com>"]
readme = "README.md"
packages = [{include = "deptry_docs"}]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.8"
mkdocstrings = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
