[tool.poetry]
name = "test"
version = "0.0.1"
description = "A test project"
authors = ["test <test@test.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
toml = "^0.10.2"
urllib3 = "^1.26.12"
isort = "^5.10.1"
click = "^8.1.3"
requests = "^2.28.1"
pkginfo = "^1.8.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[tool.deptry]
ignore_obsolete = ["pkginfo"]
