[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
requires-python = ">=3.7"
dependencies = [
    "toml",
    "urllib3>=1.26.12",
    "pkginfo>=1.8.3",
]

[project.optional-dependencies]
foo = [
    "isort>=5.10.1",
    "click>=8.1.3",
]
bar = ["requests>=2.28.1"]

[tool.pdm]
version = {source = "scm"}

[tool.pdm.dev-dependencies]
lint = [
    "black>=22.6.0",
    "mypy>=1.3.0",
]
test = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
]

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
