[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "foo"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "pkginfo==1.11.1",
    "tomli==2.0.1",
    "urllib3==2.2.2",
]

[project.optional-dependencies]
foo = [
    "click==8.1.7",
    "isort==5.13.2",
]
bar = ["requests==2.32.3"]

[tool.uv]
dev-dependencies = [
    "black==24.8.0",
    "mypy==1.11.1",
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
]

[tool.deptry]
pep621_dev_dependency_groups = ["bar"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
