[tool.poetry]
name = "foo"
version = "0.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.10"
arrow = "1.3.0"
click = "8.1.8"
isort = "6.0.1"
pkginfo = "1.12.1.2"
requests = "2.32.5"
urllib3 = "2.5.0"

[tool.poetry.dev-dependencies]
black = "25.1.0"

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
