[tool.poetry]
name = "foo"
version = "0.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.10"
arrow = "1.4.0"
click = "8.3.1"
isort = "8.0.1"
pkginfo = "1.12.1.2"
requests = "2.32.5"
urllib3 = "2.6.3"

[tool.poetry.dev-dependencies]
black = "26.1.0"

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
