[tool.poetry]
name = "foo"
version = "0.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.9"
arrow = "1.3.0"
click = "8.1.7"
isort = "5.13.2"
pkginfo = "1.11.2"
requests = "2.32.3"
urllib3 = "2.2.3"

[tool.poetry.dev-dependencies]
black = "24.10.0"

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
