[project]
name = "foo"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "arrow==1.4.0",
    "click==8.3.1",
    "isort==8.0.1",
    "pkginfo==1.12.1.2",
    "requests==2.32.5",
    "urllib3==2.6.3",
]

[project.optional-dependencies]
dev = [
    "black==26.1.0",
    "mypy==1.19.1",
]
test = ["pytest==9.0.2"]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
