[project]
name = "foo"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "click==8.1.8",
    "urllib3==2.5.0",
    "requests==2.32.5",
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.deptry]
optional_dependencies_dev_groups = ["dev"]

[tool.deptry.per_rule_ignores]
DEP002 = ["requests"]
