[project]
name = "foo"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = ["arrow==1.4.0"]

[project.optional-dependencies]
dev = ["flake8==7.3.0"]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.deptry]
pep621_dev_dependency_groups = ["dev"]
