[project]
name = "foo"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "arrow==1.3.0",
    "pkginfo==1.12.1.2",
    "urllib3==2.5.0",
]

[project.optional-dependencies]
baz = [
    "click==8.1.8",
    "isort==6.0.1",
]
bar = ["requests==2.32.4"]

[tool.pdm]
version = {source = "scm"}

[dependency-groups]
foo = [
    "certifi==2025.7.14",
    "idna==3.10",
]
all = [{include-group = "foo"}, "packaging==25.0"]

[tool.pdm.dev-dependencies]
lint = [
    "black==25.1.0",
    "mypy==1.17.0",
]
test = [
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
]

[tool.deptry]
pep621_dev_dependency_groups = ["bar"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
