[project]
name = "foo"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "arrow==1.4.0",
    "pkginfo==1.12.1.2",
    "urllib3==2.6.3",
]

[project.optional-dependencies]
baz = [
    "click==8.3.1",
    "isort==7.0.0",
]
bar = ["requests==2.32.5"]

[tool.pdm]
version = {source = "scm"}

[dependency-groups]
foo = [
    "certifi==2026.1.4",
    "idna==3.11",
]
all = [{include-group = "foo"}, "packaging==26.0"]

[tool.pdm.dev-dependencies]
lint = [
    "black==26.1.0",
    "mypy==1.19.1",
]
test = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
]

[tool.deptry]
optional_dependencies_dev_groups = ["bar"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
