[project]
name = "foo"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "arrow==1.3.0",
    "asyncio==3.4.3",
    "click==8.1.8",
    "isort==6.0.1",
    "pkginfo==1.12.1.2",
    "requests==2.32.4",
    "urllib3==2.5.0",
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "mypy==1.17.0",
]
test = ["pytest==8.4.1"]
plot = ["matplotlib==3.9.4"]

[dependency-groups]
foo = [
    "certifi==2025.7.14",
    "idna==3.10",
]
all = [{include-group = "foo"}, "packaging==25.0"]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.deptry]
pep621_dev_dependency_groups = ["dev"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
