[project]
name = "foo"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "asyncio==3.4.3",
    "click==8.1.7",
    "isort==5.13.2",
    "pkginfo==1.11.2",
    "requests==2.32.3",
    "tomli==2.0.2",
    "urllib3==2.2.3",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "mypy==1.13.0",
]
test = ["pytest==8.3.3"]
plot = ["matplotlib==3.9.2"]

[dependency-groups]
doc = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.5.42",
]
all = [{include-group = "doc"}, "packaging==24.1"]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.deptry]
pep621_dev_dependency_groups = ["dev"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
