[project]
name = "foo"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "arrow==1.3.0",
    "asyncio==3.4.3",
    "click==8.1.7",
    "isort==5.13.2",
    "pkginfo==1.11.2",
    "requests==2.32.3",
    "urllib3==2.2.3",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "mypy==1.13.0",
]
test = ["pytest==8.3.3"]
plot = ["matplotlib==3.9.2"]

[dependency-groups]
foo = [
    "certifi==2024.8.30",
    "idna==3.10",
]
all = [{include-group = "foo"}, "packaging==24.1"]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.deptry]
pep621_dev_dependency_groups = ["dev"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
