[tool.poetry]
name = "foo"
version = "0.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.9"
arrow = "1.3.0"
pkginfo = "1.12.1.2"
urllib3 = "2.5.0"

click = { version = "8.1.8", optional = true }
isort = { version = "6.0.1", optional = true }
requests = { version = "2.32.4", optional = true }

[tool.poetry.extras]
foo = [
    "click",
    "isort",
]
bar = ["requests"]

[tool.poetry.group.lint.dependencies]
black = "25.1.0"
mypy = "1.17.0"

[tool.poetry.group.test.dependencies]
pytest = "8.4.1"
pytest-cov = "6.2.1"

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
