[project]
name = "foo"
version = "0.0.1"
description = ""
authors = []
requires-python = ">=3.9"
dependencies = [
    "arrow==1.3.0",
    "pkginfo==1.12.1.2",
    "requests",
]

[tool.poetry.dependencies]
requests = { git = "https://github.com/psf/requests", tag = "v2.32.4" }

[project.optional-dependencies]
foo = [
    "click==8.1.8",
    "isort==6.0.1",
]
bar = ["urllib3==2.5.0"]

[tool.poetry.dev-dependencies]
black = "25.1.0"

[tool.poetry.group.lint.dependencies]
mypy = "1.17.0"

[tool.poetry.group.test.dependencies]
pytest = "8.4.1"
pytest-cov = "6.2.1"

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
