[project]
name = "foo"
version = "0.0.1"
description = ""
authors = []
requires-python = ">=3.10"
dependencies = [
    "arrow==1.4.0",
    "pkginfo==1.12.1.2",
    "requests",
]

[tool.poetry.dependencies]
requests = { git = "https://github.com/psf/requests", tag = "v2.32.5" }

[project.optional-dependencies]
foo = [
    "click==8.1.8",
    "isort==7.0.0",
]
bar = ["urllib3==2.5.0"]

[tool.poetry.dev-dependencies]
black = "25.9.0"

[tool.poetry.group.lint.dependencies]
mypy = "1.18.2"

[tool.poetry.group.test.dependencies]
pytest = "8.4.2"
pytest-cov = "7.0.0"

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
