[project]
name = "foo"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "arrow==1.3.0",
    "pkginfo==1.12.0",
    "urllib3==2.3.0",
]

[project.optional-dependencies]
baz = [
    "click==8.1.8",
    "isort==5.13.2",
]
bar = ["requests==2.32.3"]

[tool.pdm]
version = {source = "scm"}

[dependency-groups]
foo = [
    "certifi==2024.12.14",
    "idna==3.10",
]
all = [{include-group = "foo"}, "packaging==24.2"]

[tool.pdm.dev-dependencies]
lint = [
    "black==24.10.0",
    "mypy==1.14.1",
]
test = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
]

[tool.deptry]
pep621_dev_dependency_groups = ["bar"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
