[tool.poetry]
name = "test"
version = "0.0.1"
description = "A test project"
authors = ["test <test@test.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
pkginfo = ">=1.8.3"
toml = "*"
urllib3 = ">=1.26.12"

click = { version = ">=8.1.3", optional = true }
isort = { version = ">=5.10.1", optional = true }
requests = { version = ">=2.28.1", optional = true }

[tool.poetry.extras]
foo = [
    "click",
    "isort",
]
bar = ["requests"]

[tool.poetry.group.lint.dependencies]
black = "^22.6.0"
mypy = "^1.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
