[tool.poetry]
name = "foo"
version = "0.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.9"
arrow = "1.3.0"
pkginfo = "1.11.2"
urllib3 = "2.2.3"

click = { version = "8.1.7", optional = true }
isort = { version = "5.13.2", optional = true }
requests = { version = "2.32.3", optional = true }

[tool.poetry.extras]
foo = [
    "click",
    "isort",
]
bar = ["requests"]

[tool.poetry.group.lint.dependencies]
black = "24.10.0"
mypy = "1.13.0"

[tool.poetry.group.test.dependencies]
pytest = "8.3.3"
pytest-cov = "5.0.0"

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
