[project]
name = "foo"
version = "0.0.1"
description = ""
authors = []
requires-python = ">=3.9"
dependencies = [
    "arrow==1.3.0",
    "pkginfo==1.11.2",
    "requests",
]

[tool.poetry.dependencies]
requests = { git = "https://github.com/psf/requests", tag = "v2.32.3" }

[project.optional-dependencies]
foo = [
    "click==8.1.7",
    "isort==5.13.2",
]
bar = ["urllib3==2.2.3"]

[tool.poetry.dev-dependencies]
black = "24.10.0"

[tool.poetry.group.lint.dependencies]
mypy = "1.13.0"

[tool.poetry.group.test.dependencies]
pytest = "8.3.3"
pytest-cov = "5.0.0"

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
