[project]
name = "foo"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "arrow==1.3.0",
    "click==8.1.8",
    "isort==5.13.2",
    "pkginfo==1.12.0",
    "requests==2.32.3",
    "urllib3==2.3.0",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "mypy==1.14.1",
]
test = ["pytest==8.3.4"]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
