[project]
name = "foo"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "arrow==1.3.0",
    "pkginfo==1.11.2",
    "urllib3==2.2.3",
]

[project.optional-dependencies]
foo = [
    "click==8.1.7",
    "isort==5.13.2",
]
bar = ["requests==2.32.3"]

[dependency-groups]
foo = [
    "certifi==2024.8.30",
    "idna==3.10",
]
all = [{include-group = "foo"}, "packaging==24.1"]

[tool.uv]
dev-dependencies = [
    "black==24.10.0",
    "mypy==1.13.0",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
]

[tool.deptry]
pep621_dev_dependency_groups = ["bar"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
