[project]
name = "foo"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "arrow==1.3.0",
    "pkginfo==1.12.0",
    "urllib3==2.3.0",
]

[project.optional-dependencies]
foo = [
    "click==8.1.8",
    "isort==6.0.0",
]
bar = ["requests==2.32.3"]

[dependency-groups]
foo = [
    "certifi==2025.1.31",
    "idna==3.10",
]
all = [{include-group = "foo"}, "packaging==24.2"]

[tool.uv]
dev-dependencies = [
    "black==25.1.0",
    "mypy==1.15.0",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
]

[tool.deptry]
pep621_dev_dependency_groups = ["bar"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pkginfo"]
